--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-scroll": "^1.9.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20",
