--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "aos": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.2.1",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
